apps/libtest-2/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: libtest-2
  namespace: dev
  labels:
    app: libtest-2
    backstage.io/kubernetes-id: libtest-2
    environment: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: libtest-2
  template:
    metadata:
      labels:
        app: libtest-2
        backstage.io/kubernetes-id: libtest-2
        environment: dev
    spec:
      containers:
        - name: libtest-2
          image: jaykumark7/libtest-2:1.0.3
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "384Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
