apps/libtest-2/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: libtest-2
  namespace: dev
  labels:
    backstage.io/kubernetes-id: libtest-2
spec:
  selector:
    app: libtest-2
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
